logs/mrsd_ros_tutorials/build.make.337.log
[ 11%] Built target abstracted_class_node
[ 17%] [ 23%] [34m[1mGenerating dynamic reconfigure files from config/box_tf_offsets.cfg: /home/jin/ros/apriltag_size/devel/.private/mrsd_ros_tutorials/include/mrsd_ros_tutorials/box_tf_offsetsConfig.h /home/jin/ros/apriltag_size/devel/.private/mrsd_ros_tutorials/lib/python2.7/dist-packages/mrsd_ros_tutorials/cfg/box_tf_offsetsConfig.py
[0mBuilt target in_source_node
[ 29%] Built target kdtree_tutorial
[ 35%] Built target linear_node
[ 35%] Built target sensor_msgs_generate_messages_lisp
Generating reconfiguration files for Transforms in mrsd_ros_tutorials
Wrote header file in /home/jin/ros/apriltag_size/devel/.private/mrsd_ros_tutorials/include/mrsd_ros_tutorials/TransformsConfig.h
[ 35%] Built target std_msgs_generate_messages_lisp
[ 35%] Built target mrsd_ros_tutorials_gencfg
[ 35%] Built target _mrsd_ros_tutorials_generate_messages_check_deps_SaveData
[ 35%] Built target std_msgs_generate_messages_cpp
[ 35%] Built target sensor_msgs_generate_messages_cpp
[ 35%] Built target sensor_msgs_generate_messages_py
[ 35%] [ 35%] Built target std_msgs_generate_messages_py
Built target _mrsd_ros_tutorials_generate_messages_check_deps_kinect_apriltag_sr
[35m[1mScanning dependencies of target subscribe_pc_node
[ 41%] [32mBuilding CXX object CMakeFiles/perception_data.dir/src/perception_data.cpp.o
[0m[0m[ 47%] Built target pointcloud_transform_node
[35m[1mScanning dependencies of target display_box_marker
[ 52%] [32mBuilding CXX object CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o
[0m[0m[ 58%] [32mBuilding CXX object CMakeFiles/display_box_marker.dir/src/display_box_marker.cpp.o
[0m[ 70%] Built target mrsd_ros_tutorials_generate_messages_lisp
[ 82%] Built target mrsd_ros_tutorials_generate_messages_cpp
[100%] Built target mrsd_ros_tutorials_generate_messages_py
[100%] Built target mrsd_ros_tutorials_generate_messages
[31m[1mLinking CXX executable /home/jin/ros/apriltag_size/devel/.private/mrsd_ros_tutorials/lib/mrsd_ros_tutorials/display_box_marker
[0m[100%] Built target display_box_marker
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:205:16: error: redeclaration of ‘bool res’
           bool res = client.call(transform_srv);
                ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:204:16: error: ‘bool res’ previously declared here
           bool res = client.call(srv);
                ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[31m[1mLinking CXX executable /home/jin/ros/apriltag_size/devel/.private/mrsd_ros_tutorials/lib/mrsd_ros_tutorials/subscribe_pc_node
[0m[100%] Built target subscribe_pc_node
make: *** [all] Error 2
